# converse

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
libs/skillweaver/: pyproject.toml
libs/skillweaver/skillweaver/: schema.py
libs/skillweaver/skillweaver/schema/: __init__.py  spindle.py  web.py
